# poly-cringe

./: pyproject.toml
docs/: class_diagram.md
